--- a/about.html
+++ b/about.html
@@ -5,6 +5,5 @@ description: "This is what I do."
 header-img: "img/about-bg.jpg"
 ---
 
-<p>I graduated form the University of Michigan as a Chemical Engineer. 
-    Strangely enough, I ended going into software development instead and I haven't turned back</p>
-<p>I have worked on everything to web applications to scripts to enterprise desktop applications.</p>
+<p>I graduated form the University of Michigan as a Chemical Engineer. I worked in the lab as researcher support, building small scripts to help with the research. I ended going into software development instead and I haven't turned back.</p>
+<p>I have worked on everything to web applications to scripts to enterprise desktop applications. I primarily work on web applications. My current goal is to try out react.</p>
