--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "A Software Developer's Blog'"
+description: "A Software Developer's Blog"
 ---
 
 {% for post in paginator.posts %}
