added token sheet

--- a/hobbies.html
+++ b/hobbies.html
@@ -2,7 +2,7 @@
 layout: page
 title: Hobbies
 description: "Sometimes I don't always write code"
-header-img: post-bg-06.jpg
+header-img: "img/post-bg-06.jpg"
 ---
 
 {% for post in site.categories.Hobbies %}
