--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ header-img: "img/about-bg.jpg"
 
 <p>I graduated form the University of Michigan as a Chemical Engineer. I worked in the lab as researcher support, building small scripts to help with day to day activities. I ended going into software development instead and I haven't turned back.</p>
 <p>I have worked on everything to web applications to scripts to enterprise desktop applications. I primarily work on web applications but also have a ton of experience with C#.</p>
-<p>My current goal on this site is to experiment with javascript frontend frameworks. I want to try builing out the same application with 
+<p>My current goal on this site is to experiment with javascript frontend frameworks. I want to try building out the same application with 
     <a href="https://facebook.github.io/react/">React</a>,
     <a href="http://aurelia.io/">Aurelia</a>,
     <a href="https://angular.io/">and Angular 2</a>
